Package_Tools/include-C/llvm-c-20/llvm-c/in_arbeit/pas/DebugInfo.pas

  DerivedFrom: TLLVMMetadataRef; Elements: PLLVMMetadataRef; NumElements: dword; VTableHolder: TLLVMMetadataRef; TemplateParamsNode: TLLVMMetadataRef;
  UniqueIdentifier: pchar; UniqueIdentifierLen: Tsize_t): TLLVMMetadataRef; cdecl; external libllvm;
function LLVMDIBuilderCreateArtificialType(Builder: TLLVMDIBuilderRef; _Type: TLLVMMetadataRef): TLLVMMetadataRef; cdecl; external libllvm;
function LLVMDITypeGetName(DType: TLLVMMetadataRef; Length: Psize_t): pchar; cdecl; external libllvm;
function LLVMDITypeGetSizeInBits(DType: TLLVMMetadataRef): Tuint64_t; cdecl; external libllvm;
function LLVMDITypeGetOffsetInBits(DType: TLLVMMetadataRef): Tuint64_t; cdecl; external libllvm;
function LLVMDITypeGetAlignInBits(DType: TLLVMMetadataRef): Tuint32_t; cdecl; external libllvm;
function LLVMDITypeGetLine(DType: TLLVMMetadataRef): dword; cdecl; external libllvm;
function LLVMDITypeGetFlags(DType: TLLVMMetadataRef): TLLVMDIFlags; cdecl; external libllvm;
function LLVMDIBuilderGetOrCreateSubrange(Builder: TLLVMDIBuilderRef; LowerBound: Tint64_t; Count: Tint64_t): TLLVMMetadataRef; cdecl; external libllvm;
function LLVMDIBuilderGetOrCreateArray(Builder: TLLVMDIBuilderRef; Data: PLLVMMetadataRef; NumElements: Tsize_t): TLLVMMetadataRef; cdecl; external libllvm;
function LLVMDIBuilderCreateExpression(Builder: TLLVMDIBuilderRef; Addr: Puint64_t; Length: Tsize_t): TLLVMMetadataRef; cdecl; external libllvm;
function LLVMDIBuilderCreateConstantValueExpression(Builder: TLLVMDIBuilderRef; Value: Tuint64_t): TLLVMMetadataRef; cdecl; external libllvm;
function LLVMDIBuilderCreateGlobalVariableExpression(Builder: TLLVMDIBuilderRef; Scope: TLLVMMetadataRef; Name: pchar; NameLen: Tsize_t; Linkage: pchar;
  LinkLen: Tsize_t; File_: TLLVMMetadataRef; LineNo: dword; Ty: TLLVMMetadataRef; LocalToUnit: TLLVMBool;
  Expr: TLLVMMetadataRef; Decl: TLLVMMetadataRef; AlignInBits: Tuint32_t): TLLVMMetadataRef; cdecl; external libllvm;
function LLVMGetDINodeTag(MD: TLLVMMetadataRef): Tuint16_t; cdecl; external libllvm;
function LLVMDIGlobalVariableExpressionGetVariable(GVE: TLLVMMetadataRef): TLLVMMetadataRef; cdecl; external libllvm;
function LLVMDIGlobalVariableExpressionGetExpression(GVE: TLLVMMetadataRef): TLLVMMetadataRef; cdecl; external libllvm;
function LLVMDIVariableGetFile(Var_: TLLVMMetadataRef): TLLVMMetadataRef; cdecl; external libllvm;
function LLVMDIVariableGetScope(Var_: TLLVMMetadataRef): TLLVMMetadataRef; cdecl; external libllvm;
function LLVMDIVariableGetLine(Var_: TLLVMMetadataRef): dword; cdecl; external libllvm;
function LLVMTemporaryMDNode(Ctx: TLLVMContextRef; Data: PLLVMMetadataRef; NumElements: Tsize_t): TLLVMMetadataRef; cdecl; external libllvm;
procedure LLVMDisposeTemporaryMDNode(TempNode: TLLVMMetadataRef); cdecl; external libllvm;
procedure LLVMMetadataReplaceAllUsesWith(TempTargetMetadata: TLLVMMetadataRef; Replacement: TLLVMMetadataRef); cdecl; external libllvm;
function LLVMDIBuilderCreateTempGlobalVariableFwdDecl(Builder: TLLVMDIBuilderRef; Scope: TLLVMMetadataRef; Name: pchar; NameLen: Tsize_t; Linkage: pchar;
  LnkLen: Tsize_t; File_: TLLVMMetadataRef; LineNo: dword; Ty: TLLVMMetadataRef; LocalToUnit: TLLVMBool;
  Decl: TLLVMMetadataRef; AlignInBits: Tuint32_t): TLLVMMetadataRef; cdecl; external libllvm;
function LLVMDIBuilderInsertDeclareRecordBefore(Builder: TLLVMDIBuilderRef; Storage: TLLVMValueRef; VarInfo: TLLVMMetadataRef; Expr: TLLVMMetadataRef; DebugLoc: TLLVMMetadataRef;
  Instr: TLLVMValueRef): TLLVMDbgRecordRef; cdecl; external libllvm;
function LLVMDIBuilderInsertDeclareRecordAtEnd(Builder: TLLVMDIBuilderRef; Storage: TLLVMValueRef; VarInfo: TLLVMMetadataRef; Expr: TLLVMMetadataRef; DebugLoc: TLLVMMetadataRef;
  Block: TLLVMBasicBlockRef): TLLVMDbgRecordRef; cdecl; external libllvm;
function LLVMDIBuilderInsertDbgValueRecordBefore(Builder: TLLVMDIBuilderRef; Val: TLLVMValueRef; VarInfo: TLLVMMetadataRef; Expr: TLLVMMetadataRef; DebugLoc: TLLVMMetadataRef;
  Instr: TLLVMValueRef): TLLVMDbgRecordRef; cdecl; external libllvm;
function LLVMDIBuilderInsertDbgValueRecordAtEnd(Builder: TLLVMDIBuilderRef; Val: TLLVMValueRef; VarInfo: TLLVMMetadataRef; Expr: TLLVMMetadataRef; DebugLoc: TLLVMMetadataRef;
  Block: TLLVMBasicBlockRef): TLLVMDbgRecordRef; cdecl; external libllvm;
function LLVMDIBuilderCreateAutoVariable(Builder: TLLVMDIBuilderRef; Scope: TLLVMMetadataRef; Name: pchar; NameLen: Tsize_t; File_: TLLVMMetadataRef;
  LineNo: dword; Ty: TLLVMMetadataRef; AlwaysPreserve: TLLVMBool; Flags: TLLVMDIFlags; AlignInBits: Tuint32_t): TLLVMMetadataRef; cdecl; external libllvm;
function LLVMDIBuilderCreateParameterVariable(Builder: TLLVMDIBuilderRef; Scope: TLLVMMetadataRef; Name: pchar; NameLen: Tsize_t; ArgNo: dword;
  File_: TLLVMMetadataRef; LineNo: dword; Ty: TLLVMMetadataRef; AlwaysPreserve: TLLVMBool; Flags: TLLVMDIFlags): TLLVMMetadataRef; cdecl; external libllvm;
function LLVMGetSubprogram(Func: TLLVMValueRef): TLLVMMetadataRef; cdecl; external libllvm;
procedure LLVMSetSubprogram(Func: TLLVMValueRef; SP: TLLVMMetadataRef); cdecl; external libllvm;
function LLVMDISubprogramGetLine(Subprogram: TLLVMMetadataRef): dword; cdecl; external libllvm;
function LLVMInstructionGetDebugLoc(Inst: TLLVMValueRef): TLLVMMetadataRef; cdecl; external libllvm;
procedure LLVMInstructionSetDebugLoc(Inst: TLLVMValueRef; Loc: TLLVMMetadataRef); cdecl; external libllvm;
function LLVMDIBuilderCreateLabel(Builder: TLLVMDIBuilderRef; Context: TLLVMMetadataRef; Name: pchar; NameLen: Tsize_t; File_: TLLVMMetadataRef;
  LineNo: dword; AlwaysPreserve: TLLVMBool): TLLVMMetadataRef; cdecl; external libllvm;
function LLVMDIBuilderInsertLabelBefore(Builder: TLLVMDIBuilderRef; LabelInfo: TLLVMMetadataRef; Location: TLLVMMetadataRef; InsertBefore: TLLVMValueRef): TLLVMDbgRecordRef; cdecl; external libllvm;
function LLVMDIBuilderInsertLabelAtEnd(Builder: TLLVMDIBuilderRef; LabelInfo: TLLVMMetadataRef; Location: TLLVMMetadataRef; InsertAtEnd: TLLVMBasicBlockRef): TLLVMDbgRecordRef; cdecl; external libllvm;
function LLVMGetMetadataKind(Metadata: TLLVMMetadataRef): TLLVMMetadataKind; cdecl; external libllvm;

// === Konventiert am: 20-9-26 15:59:55 ===


implementation



end.
